--- a/client/src/components/leftbar/Leftbar.css
+++ b/client/src/components/leftbar/Leftbar.css
@@ -5,7 +5,6 @@
   transform: translateZ(0);
   box-sizing: border-box;
   font-size: 13px;
-  
 }
 .side-nav {
   height: auto;
@@ -13,14 +12,13 @@
   position: sticky;
   margin: 50px 0px;
   padding: 20px 0px;
-  flex-direction: column;
 }
 .side-nav-div {
   padding: 10px 0px;
 }
-/*.side-nav-div div {
+.side-nav-div div {
   padding-left: 10px;
-}*/
+}
 .side-nav-links {
   text-decoration: none;
   color: #3a3a3a;
@@ -33,14 +31,12 @@
 .side-nav-links:hover {
   color: black;
   background-color: rgb(225, 225, 225);
-  
 }
 .active {
   font-weight: bolder;
   color: black;
   background-color: rgb(225, 225, 225);
   border-right: solid 3px #ef8236;
-  
 }
 @media (max-width: 576px) {
 }
