--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,6 +1,6 @@
 .home-container-1 {
     min-height: 100vh;
-    /*max-width: 1250px;*/
+    max-width: 1250px;
     width: 100%;
     display: flex;
     justify-content: space-between;
