--- a/client/src/pages/Questions/Questions.css
+++ b/client/src/pages/Questions/Questions.css
@@ -102,6 +102,17 @@
   .post-ans-container form .post-ans-btn:hover {
     background-color: #0086d8;
   }
+  .ans-tags{
+    padding: 5px 5px;
+    margin: 3px;
+    font-size: 13px;
+    border-radius: 2px;
+    background-color: #e1ecf4;
+    color: #39739d;
+    text-decoration: none;
+    line-height: 22px;
+    text-decoration: none;
+  }
   .display-ans {
     padding-bottom: 20px;
     border-bottom: solid 1px rgba(0, 0, 0, 0.112);
